--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,9 +1,19 @@
+name: youcanotowenit
+description: "Application de suivi des nageurs"
+
+publish_to: 'none'
+version: 1.0.0+1
+
+environment:
+  sdk: '>=2.18.0 <4.0.0'
+
 dependencies:
   flutter:
     sdk: flutter
+  cupertino_icons: ^1.0.2
+  firebase_core: ^2.15.0
   cloud_firestore: ^4.9.5
   firebase_auth: ^4.11.1
-  firebase_core: ^2.13.1
   printing: ^5.10.1
   pdf: ^3.10.2
   intl: ^0.18.1
@@ -12,3 +22,6 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+
+flutter:
+  uses-material-design: true
